Updated theme, made certain buttons more closely adhere to Material design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:elevation="5sp"/>
 
 </RelativeLayout>
