--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="180dp"
-    android:background="@color/header_background_color">
-
+    android:background="@color/header_background_color"
+    android:elevation="6dp">
 
     <ImageView
         android:layout_width="100dp"
